objects/IAM_App_Expiration_Codes__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Code__c</fullName>
        <label>Expiration Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>App Expiration Codes</label>
    <pluralLabel>App Expiration Codes</pluralLabel>
</CustomObject>